@@ -1,27 +1,0 @@
-=== Version 0.4.6 ===
-
-Yes, already a new version of FireGPG to correct some problems : lag with the gmail 2.0 support and better sign checks !
-
-Attach a chiffred file is a new feature for gmail too :).
-
-Bugs :
-- Improuve sign checks with replacing strange space to normal spaces !
-- Better gmail's integration who don't make FireFox blocked for some seconds each 5sec. Check are only did if you click, and after 5sec.
-
-Functionalities:
-- Button to add a chiffred file as an attachment ! (Only for the new gmail's version)
-- Show the date of signs
-- Added informations about why a check failled (bad sign or key not found)
-
-Locales :
-- Nothing
-
-Misc :
-- We add a page about our contributors : http://firegpg.tuxfamily.org/?page=contrib&lang=fr !
-
-Thanks to them and don't forget to report bugs or sugestions ! (And donations are welcome too ;))
-
-* Post on our forum about this version : http://firegpg.tuxfamily.org/forum/viewtopic.php?pid=779
-
-Thanks you for using FireGPG !
-    FireGPG's team.
